Removed some scrollbar CSS to fix(?) double scrlbr
Sometimes, when loading the home row mods page in particular, you get
two scrollbars instead of just one. The extra scollbar only being
capable of a limited range of motion and any content outside of that
limited range is scrambled and jammed all on top of each other. A simple
refresh or Ctrl+Shift+I is enough to fix the issue. I have yet to find a
way to reliably reproduce the problem.

--- a/assets/css/dark_reader.css
+++ b/assets/css/dark_reader.css
@@ -7,10 +7,6 @@
 }
 
 a { color: rgb(140, 140, 250);
- }::-webkit-scrollbar-track-piece { background-color: rgba(255, 255, 255, 0.2) !important;
- }::-webkit-scrollbar-track { background-color: rgba(255, 255, 255, 0.3) !important;
- }::-webkit-scrollbar-thumb { background-color: rgba(255, 255, 255, 0.5) !important;
- }embed[type="application/pdf"] { filter: invert(90%);
  }
 
 /* Reset
