--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -1,28 +1,4 @@
-html {
-    background-color: #181a1b !important;
-}
-html, body, input, textarea, select, button {
-    background-color: #181a1b;
-}
-html, body, input, textarea, select, button {
-    border-color: #736b5e;
-    color: #e8e6e3;
-}
-a {
-    color: #3391ff;
-}
-table {
-    border-color: #545b5e;
-}
-::placeholder {
-    color: #b2aba1;
-}
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-    background-color: #555b00 !important;
-    color: #e8e6e3 !important;
-}
+
 ::-webkit-scrollbar {
     background-color: #202324;
     color: #aba499;
